# karnaugh-map-solver

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
data/: test1.txt
include/: karnaugh.hpp  logger.hpp
src/: expression_data.rs  file_reader.rs  four_variable_map.rs  karnaugh.cpp  karnaugh.rs  logger.cpp  logger.rs  main.cpp  main.rs  prime_implicant_reducer.rs
src/util/: file_reader.rs  logger.rs
